@@ -5,33 +5,28 @@ import exe201.Refashion.dto.request.OrderRequest;
 import exe201.Refashion.dto.response.OrderHistoryResponse;
 import exe201.Refashion.dto.response.OrderResponse;
 import exe201.Refashion.entity.OrderItems;
-import exe201.Refashion.enums.OrderStatus;
 import exe201.Refashion.entity.Orders;
 import exe201.Refashion.entity.Products;
 import exe201.Refashion.entity.Users;
+import exe201.Refashion.enums.OrderImageType;
+import exe201.Refashion.enums.OrderStatus;
 import exe201.Refashion.enums.PaymentStatus;
 import exe201.Refashion.exception.AppException;
 import exe201.Refashion.exception.ErrorCode;
 import exe201.Refashion.mapper.OrderMapper;
-import exe201.Refashion.repository.OrderItemsRepository;
-import exe201.Refashion.repository.OrderRepository;
-import exe201.Refashion.repository.ProductRepository;
-import exe201.Refashion.repository.UserRepository;
+import exe201.Refashion.repository.*;
 import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import org.springframework.web.multipart.MultipartFile;
+import jakarta.mail.MessagingException;
 
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.UUID;
 import java.util.stream.Collectors;
-
-import static exe201.Refashion.enums.PaymentStatus.UNPAID;
 
 @Service
 @RequiredArgsConstructor
@@ -44,10 +39,13 @@ public class OrderService {
     ProductRepository productRepository;
     OrderMapper orderMapper;
     OrderItemsRepository orderItemsRepository;
-    FileUploadService fileUploadService;
+    EmailService emailService;
 
     @Transactional
     public OrderResponse createOrder(OrderRequest orderRequest) {
+        log.info("Creating order with request: {}", orderRequest);
+
+        // Validate buyer
         Users buyer = userRepository.findById(orderRequest.getBuyerId())
                 .orElseThrow(() -> new AppException(ErrorCode.USER_NOT_FOUND));
 
@@ -61,64 +59,97 @@ public class OrderService {
             throw new AppException(ErrorCode.PRODUCT_NOT_FOUND);
         }
 
-        // Validate: tất cả sản phẩm phải cùng 1 seller
+        // Validate: tất cả sản phẩm cùng 1 seller
         Users seller = products.get(0).getSeller();
         boolean sameSeller = products.stream()
                 .allMatch(product -> product.getSeller().getId().equals(seller.getId()));
-
         if (!sameSeller) {
             throw new AppException(ErrorCode.MULTIPLE_SELLERS_NOT_ALLOWED);
         }
 
+        // Validate sellerId
+        if (!orderRequest.getSellerId().equals(seller.getId())) {
+            throw new AppException(ErrorCode.SELLER_MISMATCH);
+        }
+
         // Tính totalAmount
-        BigDecimal totalAmount = orderRequest.getItems().stream()
-                .map(item -> {
-                    Products product = productRepository.findById(item.getProductId())
-                            .orElseThrow(() -> new AppException(ErrorCode.PRODUCT_NOT_FOUND));
-                    return product.getPrice().multiply(BigDecimal.valueOf(item.getQuantity() != null ? item.getQuantity() : 1));
+        BigDecimal totalAmount = products.stream()
+                .map(product -> {
+                    Integer quantity = orderRequest.getItems().stream()
+                            .filter(item -> item.getProductId().equals(product.getId()))
+                            .findFirst()
+                            .map(OrderItemRequest::getQuantity)
+                            .orElse(1);
+                    return product.getPrice().multiply(BigDecimal.valueOf(quantity));
                 })
                 .reduce(BigDecimal.ZERO, BigDecimal::add);
 
+        // Tạo order trước (chưa gán images/items)
         Orders order = Orders.builder()
-                .id(UUID.randomUUID().toString())
                 .buyer(buyer)
                 .seller(seller)
                 .totalAmount(totalAmount)
                 .shippingAddress(orderRequest.getShippingAddress())
                 .status(OrderStatus.PENDING)
-                .paymentStatus(UNPAID)
+                .paymentStatus(PaymentStatus.PENDING)
                 .createdAt(LocalDateTime.now())
                 .build();
 
-        // Lưu order trước
-        Orders savedOrder = orderRepository.save(order);
+        // Save order để lấy ID
+        Orders savedOrder = orderRepository.saveAndFlush(order);
+        log.info("Order saved with ID: {}", savedOrder.getId());
 
-        // Tạo và lưu OrderItems sau khi đã có Orders
-        List<OrderItems> orderItems = orderRequest.getItems().stream()
-                .map(item -> {
-                    Products product = productRepository.findById(item.getProductId())
-                            .orElseThrow(() -> new AppException(ErrorCode.PRODUCT_NOT_FOUND));
-                    return OrderItems.builder()
-                            .id(UUID.randomUUID().toString()) // Tạo ID cho OrderItems
-                            .order(savedOrder) // Gán order đã lưu
+        // Thêm payment images nếu có
+        if (orderRequest.getPaymentImageUrls() != null && !orderRequest.getPaymentImageUrls().isEmpty()) {
+            String firstUrl = orderRequest.getPaymentImageUrls().stream()
+                    .filter(url -> url != null && !url.trim().isEmpty())
+                    .findFirst()
+                    .orElse(null);
+            savedOrder.setPaymentScreenshotUrl(firstUrl);
+        }
+        orderRepository.save(savedOrder);
+        log.info("Order: {}", savedOrder);
+        log.info("Order Items: {}", savedOrder.getOrderItems());
+
+        // Tạo và lưu order items
+        List<OrderItems> orderItems = products.stream()
+                .map(product -> {
+                    Integer quantity = orderRequest.getItems().stream()
+                            .filter(item -> item.getProductId().equals(product.getId()))
+                            .findFirst()
+                            .map(OrderItemRequest::getQuantity)
+                            .orElse(1);
+                    OrderItems item = OrderItems.builder()
+                            .order(savedOrder)
                             .product(product)
-                            .quantity(item.getQuantity() != null ? item.getQuantity() : 1)
+                            .quantity(quantity)
                             .priceAtPurchase(product.getPrice())
                             .build();
+                    return item;
                 })
-                .collect(Collectors.toList());
+                .toList();
+
+        log.info("Order: {}", savedOrder.getId());
+        log.info("Order Items: {}", savedOrder.getOrderItems());
+
+        savedOrder.setOrderItems(orderItems);
         orderItemsRepository.saveAll(orderItems);
 
-        // Cập nhật orderItems cho savedOrder và lưu lại
+        log.info("Order: {}", savedOrder.getId());
+        log.info("Order Items: {}", savedOrder.getOrderItems());
+
+        orderItemsRepository.saveAll(orderItems);
         savedOrder.setOrderItems(orderItems);
-        orderRepository.save(savedOrder); // Lưu lại để cập nhật quan hệ
+        log.info("Saved {} order items", orderItems.size());
 
-        // Đánh dấu là sold nếu đơn hàng đã được lưu thành công
-        Products product = productRepository.findById(orderRequest.getItems().getFirst().getProductId())
-                .orElseThrow(() -> new AppException(ErrorCode.PRODUCT_NOT_FOUND));
-        product.setIsSold(true);
-        productRepository.save(product);
+        // Đánh dấu sản phẩm đã bán
+        for (Products product : products) {
+            product.setIsSold(true);
+        }
+        productRepository.saveAll(products);
+        log.info("Marked {} products as sold", products.size());
 
+        // Trả về response
         return orderMapper.toOrderResponse(savedOrder);
     }
 
@@ -129,7 +160,7 @@ public class OrderService {
         if (order.getStatus() != OrderStatus.PENDING) {
             throw new AppException(ErrorCode.INVALID_STATUS_TRANSITION);
         }
-        order.setStatus(OrderStatus.CANCELED);
+        order.setStatus(OrderStatus.CANCELLED);
         orderRepository.save(order);
     }
 
@@ -166,8 +197,6 @@ public class OrderService {
             throw new AppException(ErrorCode.INVALID_ORDER_STATUS);
         }
 
-        validateStatusTransition(order.getStatus(), orderStatus);
-
         order.setStatus(orderStatus);
         order = orderRepository.save(order);
 
@@ -175,14 +204,10 @@ public class OrderService {
     }
 
     public List<OrderResponse> getOrdersBySeller(String sellerId) {
-        // Kiểm tra xem seller có tồn tại không
         userRepository.findById(sellerId)
                 .orElseThrow(() -> new AppException(ErrorCode.USER_NOT_FOUND));
 
-        // Lấy danh sách đơn hàng của seller
         List<Orders> orders = orderRepository.findBySellerId(sellerId);
-
-        // Ánh xạ sang OrderResponse
         return orders.stream()
                 .map(orderMapper::toOrderResponse)
                 .collect(Collectors.toList());
@@ -206,10 +231,22 @@ public class OrderService {
             throw new AppException(ErrorCode.INVALID_PAYMENT_STATUS);
         }
 
-        validatePaymentStatusTransition(order.getPaymentStatus(), newPaymentStatus);
-
         order.setPaymentStatus(newPaymentStatus);
         order = orderRepository.save(order);
+
+        // Send email notifications based on payment status
+        try {
+            if (newPaymentStatus == PaymentStatus.PAID) {
+                // Notify seller
+                emailService.sendOrderPaidEmail(order.getSeller().getEmail(), orderId, order.getTotalAmount().toString(), order.getShippingAddress());
+                // Notify buyer
+                emailService.sendOrderPaidConfirmationToBuyer(order.getBuyer().getEmail(), orderId, order.getTotalAmount().toString());
+            } else if (newPaymentStatus == PaymentStatus.UNPAID) {
+                emailService.sendOrderUnpaidEmail(order.getBuyer().getEmail(), orderId, order.getTotalAmount().toString());
+            }
+        } catch (MessagingException e) {
+            log.error("Failed to send email notification for order {}: {}", orderId, e.getMessage());
+        }
 
         return orderMapper.toOrderResponse(order);
     }
@@ -222,94 +259,79 @@ public class OrderService {
     }
 
     @Transactional
-    public OrderResponse updatePaymentStatusWithImage(String orderId, String paymentStatus, MultipartFile paymentImage) {
-        Orders order = orderRepository.findById(orderId)
+    public OrderResponse updatePaymentImage(String orderId, String buyerId, List<String> paymentImageUrls) {
+        Orders order = orderRepository.findByIdAndBuyerId(orderId, buyerId)
                 .orElseThrow(() -> new AppException(ErrorCode.ORDER_NOT_FOUND));
 
-        PaymentStatus newPaymentStatus = PaymentStatus.valueOf(paymentStatus.toUpperCase());
-        validatePaymentStatusTransition(order.getPaymentStatus(), newPaymentStatus);
-
-        if (paymentImage != null) {
-            String imageUrl = fileUploadService.uploadImage(paymentImage);
-            order.setPaymentScreenshotUrl(imageUrl);
+        if (paymentImageUrls != null && !paymentImageUrls.isEmpty()) {
+            String newImageUrl = paymentImageUrls.get(0);
+            if (newImageUrl != null && !newImageUrl.trim().isEmpty()) {
+                order.setPaymentScreenshotUrl(newImageUrl);
+            }
         }
-        order.setPaymentStatus(newPaymentStatus);
+
         orderRepository.save(order);
         return orderMapper.toOrderResponse(order);
     }
 
     @Transactional
-    public OrderResponse updateToShipped(String orderId, MultipartFile packageImage, String sellerId) {
+    public OrderResponse updateToShipped(String orderId, List<String> packageImageUrls, String sellerId) {
         Orders order = orderRepository.findById(orderId)
                 .orElseThrow(() -> new AppException(ErrorCode.ORDER_NOT_FOUND));
         if (!order.getSeller().getId().equals(sellerId)) {
             throw new AppException(ErrorCode.UNAUTHORIZED_ACTION);
         }
-        validateStatusTransition(order.getStatus(), OrderStatus.SHIPPED);
-        if (packageImage != null) {
-            String imageUrl = fileUploadService.uploadImage(packageImage);
-            order.setSellerPackageImageUrl(imageUrl);
+
+        if (packageImageUrls != null && !packageImageUrls.isEmpty()) {
+            order.setSellerPackageImageUrl(packageImageUrls.get(0));
+        } else {
+            order.setSellerPackageImageUrl(null);
         }
+
         order.setStatus(OrderStatus.SHIPPED);
         orderRepository.save(order);
         return orderMapper.toOrderResponse(order);
     }
 
     @Transactional
-    public OrderResponse confirmDelivered(String orderId, MultipartFile packageImage, String buyerId) {
-        Orders order = orderRepository.findByIdAndBuyerId(orderId, buyerId)
+    public OrderResponse uploadAdminPaymentImage(String orderId, List<String> imageUrls) {
+        Orders order = orderRepository.findById(orderId)
                 .orElseThrow(() -> new AppException(ErrorCode.ORDER_NOT_FOUND));
-        validateStatusTransition(order.getStatus(), OrderStatus.DELIVERED);
-        if (packageImage != null) {
-            String imageUrl = fileUploadService.uploadImage(packageImage);
-            order.setBuyerPackageImageUrl(imageUrl);
+
+        if (imageUrls != null && !imageUrls.isEmpty()) {
+            String adminImage = imageUrls.get(0);
+            if (adminImage != null && !adminImage.trim().isEmpty()) {
+                order.setAdminPaymentScreenshotUrl(adminImage);
+            }
         }
-        order.setStatus(OrderStatus.DELIVERED);
+
         orderRepository.save(order);
         return orderMapper.toOrderResponse(order);
     }
 
-    private void validateStatusTransition(OrderStatus currentStatus, OrderStatus newStatus) {
-        switch (currentStatus) {
-            case PENDING:
-                if (newStatus != OrderStatus.PROCESSING && newStatus != OrderStatus.CANCELED) {
-                    throw new AppException(ErrorCode.INVALID_STATUS_TRANSITION);
-                }
-                break;
-            case PROCESSING:
-                if (newStatus != OrderStatus.SHIPPED && newStatus != OrderStatus.CANCELED) {
-                    throw new AppException(ErrorCode.INVALID_STATUS_TRANSITION);
-                }
-                break;
-            case SHIPPED:
-                if (newStatus != OrderStatus.DELIVERED && newStatus != OrderStatus.CANCELED) {
-                    throw new AppException(ErrorCode.INVALID_STATUS_TRANSITION);
-                }
-                break;
-            case DELIVERED:
-            case CANCELED:
-                throw new AppException(ErrorCode.INVALID_STATUS_TRANSITION);
-            default:
-                throw new AppException(ErrorCode.INVALID_ORDER_STATUS);
-        }
+    @Transactional
+    public OrderResponse markOrderAsRefund(String orderId) {
+        Orders order = orderRepository.findById(orderId)
+                .orElseThrow(() -> new AppException(ErrorCode.ORDER_NOT_FOUND));
+
+        order.setStatus(OrderStatus.REFUND);
+        orderRepository.save(order);
+        return orderMapper.toOrderResponse(order);
     }
 
-    private void validatePaymentStatusTransition(PaymentStatus currentStatus, PaymentStatus newStatus) {
-        switch (currentStatus) {
-            case UNPAID:
-                if (newStatus != PaymentStatus.PAID) {
-                    throw new AppException(ErrorCode.INVALID_PAYMENT_STATUS_TRANSITION);
-                }
-                break;
-            case PAID:
-                if (newStatus != PaymentStatus.REFUNDED) {
-                    throw new AppException(ErrorCode.INVALID_PAYMENT_STATUS_TRANSITION);
-                }
-                break;
-            case REFUNDED:
-                throw new AppException(ErrorCode.INVALID_PAYMENT_STATUS_TRANSITION);
-            default:
-                throw new AppException(ErrorCode.INVALID_PAYMENT_STATUS);
+    @Transactional
+    public OrderResponse confirmDelivered(String orderId, List<String> packageImageUrls, String buyerId) {
+        Orders order = orderRepository.findByIdAndBuyerId(orderId, buyerId)
+                .orElseThrow(() -> new AppException(ErrorCode.ORDER_NOT_FOUND));
+
+        if (packageImageUrls != null && !packageImageUrls.isEmpty()) {
+            order.setBuyerPackageImageUrl(packageImageUrls.get(0));
+        } else {
+            order.setBuyerPackageImageUrl(null);
         }
+
+        order.setStatus(OrderStatus.DELIVERED);
+        orderRepository.save(order);
+        return orderMapper.toOrderResponse(order);
     }
 }
